--- a/Views/Todo/Index.cshtml
+++ b/Views/Todo/Index.cshtml
@@ -1,7 +1,7 @@
 @model TodoViewModel
 @using Humanizer
 @{
-    ViewData["Title"] = "Manage your todo list";
+    ViewData["Title"] = "Administra tus tareas";
 }
 
 <div class="panel panel-default todo-panel">
@@ -11,8 +11,8 @@
       <thead>
           <tr>
               <td>&#x2714;</td>
-              <td>Item</td>
-              <td>Due</td>
+              <td>Elemento</td>
+              <td>Vencimiento</td>
           </tr>
       </thead>
 
@@ -20,15 +20,18 @@
       {
           <tr>
               <td>
-                <input type="checkbox" class="done-checkbox">
-              </td>
+              <form asp-action="MarkDone" method="POST">
+              <input type="checkbox" class="done-checkbox">
+              <input type="hidden" name="id" value="@item.Id">
+              </form>
+            </td>
               <td>@item.Title</td>
-              <td>@item.DueAt</td>
+              <td>@item.DueAt.Humanize()</td>
           </tr>
       }
   </table>
 
   <div class="panel-footer add-item-form">
-    <!-- TODO: Add item form -->
+      @await Html.PartialAsync("AddItemPartial", new TodoItem())
   </div>
 </div>
